# sdkcpc

./: .gitignore  404.html  MANIFEST.in  NOTAS.TXT  NOTES  README.md  about.html  index.html  make  make-prod  mkdocs.yml  pypi  pyproject.toml  pytest  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: documentation.yml  publish-pypi.yml  publish-pytest.yml  publish.yml  static.yml
about/: index.html
authenticated/: index.html
commands/: index.html
docs/: 404.html  about.md  commands.md  getting-started.md  index.html  index.md  index1.md  instalation.md  license.md  mkdocs.yml  release-notes.md  search.html
docs/about/: index.html
docs/authenticated/: index.html
docs/cosas/: .readthedocs.yaml
getting-started/: index.html
index1/: index.html
instalation/: index.html
license/: index.html
release-notes/: index.html
sdkcpc/: __main__.py  about.py  build.py  check.py  common.py  compile.py  config.py  files.py  info.py  new.py  project.py  run.py  schema copy.py  schema.py  sdkcpc.yml  validate.py
sdkcpc/resources/: gitignore
sdkcpc/resources/idsk/darwin/: iDSK
sdkcpc/resources/platform/linux/x64/: iDSK
sdkcpc/resources/software/: 8bp.dsk.old  BUILD  versions
sdkcpc/resources/templates/: 8bp.j2  basic.j2  project.j2
sdkcpc/resources/vscode/: amstrad.json.code-snippets  tasks.json
search/: search_index.json
tests/: test_sdkcpc.py
